--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   firebase_core: ^2.15.1
   firebase_auth: ^4.7.3
   flutter_animation_progress_bar: ^2.3.1
+  loading_animation_widget: ^1.2.0+4
+  flutter_spinkit: ^5.0.0
+  cloud_firestore: ^4.8.5
 
 dev_dependencies:
   flutter_test:
