--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   loading_animation_widget: ^1.2.0+4
   flutter_spinkit: ^5.0.0
   cloud_firestore: ^4.8.5
+  image_picker: ^1.0.2
+  firebase_storage: ^11.2.6
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
